k8s/api/formatio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formatio-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formatio-api
  template:
    metadata:
      labels:
        app: formatio-api
    spec:
      imagePullSecrets:
      - name: ghcr
      containers:
      - name: formatio-api
        image: ghcr.io/overal-x/api.formatio:development
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            memory: "256Mi"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: formatio-api-service
spec:
  selector:
    app: formatio-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
