k8s/api/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formatio-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formatio-db
  template:
    metadata:
      labels:
        app: formatio-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "256Mi"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: formatio-db-service
spec:
  selector:
    app: formatio-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
